fixed firefox scrollbars issue

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -1,6 +1,7 @@
 
 body {
     margin: 0;
+    overflow: hidden;
 }
 
 /* Placeholders. */
@@ -62,7 +63,7 @@ body {
     width: 100%;
     height: 50%;
     background-color: white;
-    overflow: scroll;
+    overflow: auto;
     z-index: 1000;
 }
 
@@ -88,7 +89,7 @@ body {
 
 #bottom {
     height: 50%;
-    overflow: scroll;
+    overflow: auto;
 }
 
 
